[gd_scene load_steps=7 format=2]

[ext_resource path="res://Elementos/Visuais/Botoes/BotaoSelecionado3x8.svg" type="Texture" id=1]
[ext_resource path="res://Elementos/Visuais/Botoes/BotaoSolto3x8.svg" type="Texture" id=2]
[ext_resource path="res://Cenas/FonteComicSans.tscn" type="PackedScene" id=3]
[ext_resource path="res://Elementos/Visuais/Icones/Padrao.svg" type="Texture" id=4]
[ext_resource path="res://Codigos/BotaoHorizontal.gd" type="Script" id=5]
[ext_resource path="res://Elementos/Sonoros/Cliques/Clicar.wav" type="AudioStream" id=6]

[node name="BotaoHorizontal" type="TextureButton"]
keep_pressed_outside = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConteinerHorizontal" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -18.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icone" type="TextureRect" parent="ConteinerHorizontal"]
margin_right = 97.0
margin_bottom = 131.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="Texto" parent="ConteinerHorizontal" instance=ExtResource( 3 )]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 117.0
margin_top = 23.0
margin_right = 411.0
margin_bottom = 108.0
text = "Horizontal"
align = 2
valign = 1

[node name="Som" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="button_down" from="." to="." method="_on_BotaoHorizontal_Selecionado"]
[connection signal="button_up" from="." to="." method="_on_BotaoHorizontal_Solto"]
[connection signal="pressed" from="." to="." method="_on_BotaoHorizontal_Comando"]
[connection signal="toggled" from="." to="." method="_on_BotaoHorizontal_estado"]
